# tanks

./: .gitignore  CMakeLists.txt  README.md  Tank Game.sln
Project2/: CMakeLists.txt  Components.h  Project2.vcxproj  Project2.vcxproj.filters  Tank Game Sol.sln  UserInterface.cpp
Project2/include/: Components.h  DEBUG.h  Managers.h  Systems.h  application.h  events.h  utils.h
Project2/include/components/: GUIObj.h  KeyControls.h  Label.h  MouseControls.h  Score.h  StdComponent.h  UserInterface.h  VertexArray.h  ViewController.h  bounding_box.h  bounding_circle.h  expires.h  explosible.h  gun.h  health.h  map_desc.h  name.h  player.h  projectile.h  render_properties.h  solid.h  spawn_location.h  sprite.h  tank_controls.h  texture.h  texture_handle.h  tilemap.h  transform.h  velocity.h
Project2/include/core/: environment.h
Project2/include/managers/: CPU_Manager.h  HUD_Manager.h  InputControls_Mgr.h  UI_Manager.h  entity_manager.h  font_manager.h  game_manager.h  managers.h  map_loader.h  net_manager.h  score_manager.h  sprite_batch.h  texture_manager.h
Project2/include/math/: vector.h
Project2/include/systems/: CPU_System.h  HUD_System.h  MapCreationSystem.h  UI_System.h  damage_system.h  expiring_system.h  input_system.h  movement_system.h  network_system.h  physics_system.h  render_system.h  score_system.h  texture_manager.h  view_system.h
Project2/maps/: dev1.hex  dev1.map
Project2/res/: blur.frag  blur.vert
Project2/src/: application.cpp  main.cpp
Project2/src/components/: GUIObj.cpp  KeyControls.cpp  Label.cpp  MouseControls.cpp  Score.cpp  UserInterface.cpp  VertexArray.cpp  ViewController.cpp  bounding_box.cpp  bounding_circle.cpp  expires.cpp  explosible.cpp  gun.cpp  health.cpp  map_desc.cpp  name.cpp  player.cpp  projectile.cpp  render_properties.cpp  solid.cpp  spawn_location.cpp  sprite.cpp  tank_controls.cpp  texture.cpp  texture_handle.cpp  tilemap.cpp  transform.cpp  velocity.cpp
Project2/src/managers/: CPU_Manager.cpp  HUD_Manager.cpp  InputControls_Mgr.cpp  UI_Manager.cpp  entity_manager.cpp  font_manager.cpp  game_manager.cpp  map_loader.cpp  net_manager.cpp  score_manager.cpp  sprite_batch.cpp  texture_manager.cpp
Project2/src/systems/: CPU_System.cpp  HUD_System.cpp  MapCreationSystem.cpp  UI_System.cpp  damage_system.cpp  expiring_system.cpp  input_system.cpp  network_system.cpp  physics_system.cpp  render_system.cpp  score_system.cpp  texture_manager.cpp  view_system.cpp
Project3/Project3/: Project3.vcxproj
Project4/: Project4.sln
Project4/Project4/: Project4.vcxproj  Source.cpp
Tank Game/: .Object.cpp.swp  .Object.h.swp  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Component.h  DEBUG.h  Environment.cpp  Environment.h  EventMsgr.cpp  EventMsgr.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Mine.cpp  Object.cpp  Object.h  README.md  Solution1.sln  Tank Game.vcxproj  Tank Game.vcxproj.filters  Tank.cpp  Tank.h  Tilemap.cpp  Tilemap.h  VectorLN.h  changelog.md  health.h  main.cpp  utils.h
Tank Game/components/: .health.h.swp  .tank_controls.h.swp  bounding_circle.h  gun.h  transform.h
Tank Game/include/: application.h
Tank Game/include/components/: bounding_circle.h  collision.h  expires.h  gun.h  health.h  sprite.h  tank_controls.h  texture_handle.h  transform.h  velocity.h
Tank Game/include/core/: .environment.h.swp  environment.h  framework.h  memory.h
Tank Game/include/systems/: input_system.h  render_system.h  sprite_manager.h
Tank Game/old/: Bullet.cpp  Environment.cpp  Environment.h  EventMsgr.h  GameObject.cpp  GameScene.cpp  GameScene.h  Line.cpp  Line.h  Mine.cpp  Mine.h  Tank.cpp  Tilemap.cpp  VectorLN.cpp
Tank Game/src/: application.cpp  main.cpp
Tank Game/src/components/: bounding_circle.cpp  expires.cpp  gun.cpp  health.cpp  tank_controls.cpp  texture_handle.cpp  velocity.cpp
Tank Game/src/core/: framework.cpp  system.cpp
Tank Game/src/systems/: expiring_system.cpp  input_system.cpp  movement_system.cpp  physics_system.cpp  sprite_manager.cpp  texture_manager.cpp
